--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "jp.keijiro.minis": "https://github.com/keijiro/Minis.git?path=Packages/jp.keijiro.minis",
+    "jp.keijiro.rtmidi": "https://github.com/keijiro/jp.keijiro.rtmidi.git?path=Packages/jp.keijiro.rtmidi",
     "com.unity.ai.navigation": "2.0.8",
     "com.unity.collab-proxy": "2.9.2",
     "com.unity.ide.rider": "3.0.36",
@@ -11,6 +13,7 @@
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.7",
+    "jp.shiranui-isuzu.unity-mcp": "https://github.com/isuzu-shiranui/UnityMCP.git?path=jp.shiranui-isuzu.unity-mcp",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
